  * Card improvements:
    - Activity Feed now shows board name and link
    - No mandatory due date
    - Redirects to new url if the card has changed lists
  * Card, Evidence, Issue, and Note form data will not be lost even if the form is not saved
    - Form data will be cleared when the "Cancel" link is clicked
    - Removed prompt to restore data
  * Comments can now have Textile markup
  * Comments now show author's name instead of email
  * Display note and evidence titles in breadcrumbs
  * Editor improvements:
    - New form-view to edit each field individually
    - Formatting toolbar to help with markup
    - Side-by-side editor preview that auto-updates
  * Link to Methodology from project summary chart
  * Navigation sidebar in projects can be kept open while navigating across views
  * Dots-menu available in any view
  * Remove tag color from issue titles in issue summary
  * Update code element style
  * Use shared noscript partial
  * Use user model reference for activities instead of user email
  * Upgraded gems: puma, rack, sass-rails
  * Bugs fixed:
    - bin/setup creating folders outside dradis-ce/
    - bin/setup error if the attachments directory already exists
    - Board partial broken structure
    - ItemsTable extra whitespace causing unnecessary vertical scrolling
    - Fix bug with v3 board templates not uploading
    - Fix textile preview not showing on issues with very long text
    - Long items_table dropdown menus not scrollable
    - Long project names interfering with search bar expansion
    - Repetative prompt when images are pasted after navigating multiple views.
    - Report 'Download' button becoming a disabled 'Processing...' button once clicked
    - SemVer pre-release appending character
    - Set :author when creating Evidence from an Issue
    - Sidebar items not showing active state
    - Textile preview not showing on issues with very long text
    - Bug tracker items: #560
  * New integrations: