@@ -6,4 +6,8 @@
   $('[data-behavior~=rich-toolbar]', '#<%= dom_id(@comment) %>').each(function() {
     new EditorToolbar($(this));
   });
+
+  $('[data-behavior~=local-auto-save]', '#<%= dom_id(@comment) %>').each(function() {
+    new LocalAutoSave(this);
+  });
 <% end %>
