@@ -44,6 +44,35 @@ shared_examples 'a page with a comments feed' do
       submit_form
     end
 
+    describe 'local caching', js: true do
+      let!(:original_page_with_comment_path) { page.current_path }
+
+      context 'when comment is not saved' do
+        it 'prefills textarea with cached value' do
+          within 'form[data-behavior~=local-auto-save]' do
+            fill_in 'comment[content]', with: 'test comment'
+            sleep 1 # Needed for debounce function in local_auto_save.js
+          end
+          page.driver.browser.navigate.refresh
+          content = page.find_field('comment[content]').value
+          expect(content).to eq 'test comment'
+        end
+      end
+
+      context 'when comment is saved' do
+        it 'clears cached value' do
+          within 'form[data-behavior~=local-auto-save]' do
+            fill_in 'comment[content]', with: 'test comment'
+            sleep 1 # Needed for debounce function in local_auto_save.js
+            click_button 'Add comment'
+          end
+          page.driver.browser.navigate.refresh
+          content = page.find_field('comment[content]').value
+          expect(content).to eq ''
+        end
+      end
+    end
+
     include_examples 'creates an Activity', :create, Comment
   end
 
@@ -72,6 +101,55 @@ shared_examples 'a page with a comments feed' do
       within "div#comment_#{id}" do
         expect(page).to have_link('Edit', visible: false)
         expect(page).not_to have_css "form#edit_comment_#{id}"
+      end
+    end
+
+    describe 'local caching', js: true do
+      let!(:original_page_with_comment_path) { page.current_path }
+
+      before do
+        find("div#comment_#{model.id}").hover
+        within "div#comment_#{model.id}" do
+          click_link 'Edit'
+          fill_in 'comment[content]', with: 'test comment edited'
+          sleep 1 # Needed for debounce function in local_auto_save.js
+        end
+      end
+
+      context 'when comment is not updated' do
+        it 'prefills textarea with cached value' do
+          page.driver.browser.navigate.refresh
+          find("div#comment_#{model.id}").hover
+          within "div#comment_#{model.id}" do
+            click_link 'Edit'
+            content = page.find_field('comment[content]').value
+            expect(content).to eq 'test comment edited'
+          end
+        end
+
+        it 'does not save unsaved changes in database' do
+          expect(model.content).not_to eq 'test comment edited'
+        end
+      end
+
+      context 'when cancel is clicked' do
+        it 'clears cached value' do
+          page.driver.browser.navigate.refresh
+          find("div#comment_#{model.id}").hover
+          within "div#comment_#{model.id}" do
+            click_link 'Edit'
+            click_link 'Cancel'
+          end
+
+          page.driver.browser.navigate.refresh
+          find("div#comment_#{model.id}").hover
+
+          within "div#comment_#{model.id}" do
+            click_link 'Edit'
+            content = page.find_field('comment[content]').value
+            expect(content).not_to eq 'test comment edited'
+          end
+        end
       end
     end
   end
